# nanoSim

./: .gitignore  CLAUDE.md  DESIGN_DOC.md  README.md  pyproject.toml
src/nanosim/: __init__.py  main.py  models.py
src/nanosim/agents/: __init__.py  base.py  prompt.py
src/nanosim/core/: __init__.py  events.py  tick.py  world.py
src/nanosim/llm/: __init__.py  router.py
src/nanosim/world/: __init__.py  personas.py  rooms.py
tests/integration/: test_full_loop.py
tests/unit/: test_agent.py  test_events.py  test_models.py  test_router.py  test_tick.py  test_world.py  test_world_presets.py
